testdata/golden/sema/invalid/module_wrong_import/foo/_foo.sg
pragma module::bar;

pub fn value() -> int {
    return 1;
}
